--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,18 +7,25 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header {
-  background-color: #3792cb;
-  padding: 1rem;
-}
-header a {
-  color: #ffd801;
-  font-weight: bold;
-  text-decoration: none;
+.site-container {
+  min-height: 100vh;
 }
 
 main {
-  padding: 1rem;
+  flex: 1;
+}
+
+.btn-primary {
+  background-color: #2a9df4;
+  color: #ffff00;
+}
+
+.navbar-brand {
+  color: #ffff00;
+}
+
+.navbar-custom {
+  background-color: #2a9df4;
 }
 
 .products {
@@ -27,17 +34,19 @@ main {
   justify-content: center;
 }
 
+.rating span {
+  color: #ffc000;
+}
+
 .product {
   border: 1px #404040 solid;
   margin: 1rem;
 }
 
 .product img {
-  float: left;
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
 }
 
 .product-info {
