Shopping Cart Screen
Created CartScreen.js with all the fronend implementation inside. Also
add handlers to all the buttons associated with this screen. Also inside
Store.js set all the cart action type to local storage so that if the
user refresh the page the items in the cart will still exist. Added
event handler in home screen for add to cart button, and create check
out button handler to navigate to sign in page once clicked.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,3 +60,11 @@ main {
   margin: auto;
   display: block;
 }
+
+.img-thumbnail {
+  height: 80px;
+}
+
+.fa-shopping-cart {
+  color: #ffff00;
+}
