Change image size Change image size to one size so overall look is better.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -105,6 +105,22 @@ main {
   color: #ffff00;
 }
 
+.card-img-top {
+  width: 270px;
+  height: 270px;
+  align-content: center;
+}
+
+.cart-img {
+  width: 70px;
+  height: 70px;
+}
+
+.product-img {
+  width: 500px;
+  height: 500px;
+}
+
 .container {
   max-width: 1200px;
 }
